# poligrain

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  openmrg_municp_gauge_5min_2h.nc  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  empty.md
.github/workflows/: cd.yml  ci.yml
docs/: CONTRIBUTING.md  conf.py  data_model.md  development.md  index.md  installation.md  set_pandoc_symlink.py
docs/api/: poligrain.rst
docs/development/: CHANGELOG.md  CONTRIBUTING.md  automation.md
docs/notebooks/: Calculate_distances.ipynb  Example_validation.ipynb  Explore_example_data.ipynb  Get radar rainfall along CML paths.ipynb  Get_grid_at_lines_and_points.ipynb  Grid_intersection.ipynb  OS_csv_to_nc_cookbook.ipynb  Plotting.ipynb  Visualize_metadata.ipynb
docs/notebooks/csv_cookbook_data/: AMS_metadatasubset.csv  ams1.csv  ams2.csv  ams3.csv  ams4.csv  ams5.csv  ams6.csv  ams7.csv  ams8.csv  ams9.csv
docs/notebooks/data/: openMRG_city_gauges_20150827.nc  openMRG_cmls_20150827_12hours.nc  openMRG_cmls_20150827_12hours.nc.old.nc  openMRG_example_rad_20150827_90minutes.nc  openMRG_smhi_gauge_20150827.nc
src/poligrain/: __init__.py  example_data.py  plot_map.py  plot_metadata.py  spatial.py  validation.py  xarray.py
tests/: test_example_data.py  test_package.py  test_plot_map.py  test_plot_metadata.py  test_spatial.py  test_validation.py
tests/test_data/: openMRG_CML_180minutes.nc  openMRG_Radar_180minutes.nc
