[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "poligrain"
version = "0.0.0"
authors = [
  "Christian Chwala <christian.chwala@kit.edu>",
]
homepage = "https://github.com/OpenSenseAction/poligrain"
repository = "https://github.com/OpenSenseAction/poligrain"
license = "BSD-3-Clause"
description = "Effortlessly plot and compare (rainfall) sensor data with point, line and grid geometry."
readme = "README.md"

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"

furo = { version = ">=2023.08.17", optional = true }
myst_parser = { version = ">=0.13", optional = true }
pytest = { version = ">=6", optional = true }
pytest-cov = { version = ">=3", optional = true }
sphinx = { version = ">=7.0", optional = true }
sphinx_copybutton = { version = ">=0.3.0", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
nbsphinx = { version = "*", optional = true }
pypandoc-binary = { version = "*", optional = true }
ipython = { version = "*", optional = true }
netcdf4 = "^1.6.5"
xarray = "^2023.12.0"
matplotlib = "^3.8.2"
nbmake = "^1.4.6"
pyproj = "^3.6.1"
scipy = "^1.12.0"
sparse = "*"
shapely = "*"

[tool.poetry.dev-dependencies]
pytest = ">= 6"
pytest-cov = ">= 3"
jupyterlab = "^4.0.10"
nbmake = "^1.4.6"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "nbmake"]
dev = ["pytest", "pytest-cov", "nbmake"]
docs = [
  "furo",
  "myst_parser",
  "sphinx",
  "sphinx_autodoc_typehints",
  "sphinx_copybutton",
  "nbsphinx",
  "pypandoc-binary",
  "ipython",
]

[tool.poetry-dynamic-versioning]
enable = true
substitution.files = ["src/poligrain/__init__.py"]


[tool.setuptools_scm]
write_to = "src/poligrain/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error", "ignore::DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["poligrain"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "poligrain.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# mypy was disabled in pre-commit and we hopefully do not need the section
# below when its usage is fixed. But I keep this section for now.
#[[tool.mypy.overrides]]
#module = "numpy,numpy.testing,xarray,matplotlib,matplotlib.pyplot,matplotlib.collections,netCDF4,poligrain"
#ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "A001",     # flake8-builtins
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "E",        # style errors
  "W",        # style warnings
  "F",        # flakes
  "D",        # pydocstyle
  "U",        # pyupgrade
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
# Disabled because this would also be forced in notebooks where
# it does not make sense. We also do not require it now in module
# files. We do currently not do type checking anyway...
#isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["poligrain._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "D"]
"noxfile.py" = ["T20", "D100"]
"docs/conf.py" = ["D100", "A001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
